Minor changes and word choice. Removed abbrev

--- a/Andrew_Jensen_Dissertation.tex
+++ b/Andrew_Jensen_Dissertation.tex
@@ -31,7 +31,7 @@
 %           If John was your chair and you had no cochair, you can simply use \chair{John}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{An Autonomous Method for Measuring 3D Joint Kinematics from 2D Xray Images}%  Put your title here.
+\title{Methods for Autonomous Measurement of 3D Joint Kinematics from 2D Fluoroscopic Images}%  Put your title here.
 
 \degreeType{Doctorate of Philosophy}%   Official name of your degree; e.g. "Doctorate of Philosophy."
 \major{Mechanical Engineering}%                    Your official Department
@@ -65,7 +65,7 @@
 
 %%% These are NOT required, so only use them if you actually need/have them.
 
-\setAbbreviationsFile{./src/0-Preamble/abbreviations}%           Abbreviations Page
+%\setAbbreviationsFile{./src/0-Preamble/abbreviations}%           Abbreviations Page
 %\setAppendixFile{appendix}%                     Appendix Content; hyperlinking might be weird.
 %\multipleAppendixtrue%                          Uncomment this if you have more than one appendix, 
 %                                                   comment it if you have only one appendix.
