--- a/src/0-Preamble/abstractFile.tex
+++ b/src/0-Preamble/abstractFile.tex
@@ -1,3 +1,16 @@
-The primary function of human synovial joints is to support the dynamic motion of the musculoskeletal system. The diseases that affect these systems typically manifest during movement, with mild to severe pain arising during specific activities or during particular ranges of motion. Unsurprisingly, the financial burden of musculoskeletal diseases is roughly USD 300 billion per year in direct and indirect costs \cite{BMUSBurdenMusculoskeletal}. One of the most common conditions affecting human joints is osteoarthritis, which involves the progressive loss of the cartilage between the joint surfaces over time \cite{sharmaOsteoarthritisCompanionRheumatology2007}. A highly effective solution for osteoarthritis is arthroplasty, which involves a partial or complete removal and resurfacing of the affected joint with polymeric and metallic components intended to relieve pain and restore a degree of natural function and motion. Despite being highly effective, roughly 20\% of patients receiving total knee arthroplasty express some form of dissatisfaction, usually manifested as pain, instability or stiffness during movement \cite{bakerRolePainFunction2007,scottPredictingDissatisfactionFollowing2010, bournePatientSatisfactionTotal2010}. Surprisingly, standard clinical musculoskeletal diagnostic methods are entirely static. That is, clinicians do not have clinically practical ways to quantify skeletal motion during weight-bearing or dynamic movement when most pain symptoms occur. Unfortunately, most of the tools used to accurately quantify 3D dynamic motion (e.g., 3D motion capture, radiostereometry, fluoroscopic model/image registration) are prohibitively expensive or impractical to use in clinical settings. Methods using single-plane fluoroscopic or flat-panel imaging with 3D-to-2D model-image registration have been used since the 1990s. They have been shown to provide sufficient accuracy for many clinical  joint assessment applications, including natural and replaced knees \cite{banksAccurateMeasurementThreedimensional1996, banksVivoKinematicsCruciateretaining1997, mahfouzRobustMethodRegistration2003, zuffiModelbasedMethodReconstruction1999}, natural and replaced shoulders \cite{matsukiVivo3DAnalysis2014, matsukiDynamicVivoGlenohumeral2012, zhuAccuracyRepeatabilityAutomatic2012, matsukiVivo3dimensionalAnalysis2011, kijimaVivo3dimensionalAnalysis2015}, and extremities \cite{yamaguchiAnkleSubtalarKinematics2009, listThreeDimensionalKinematicsUnconstrained2012, cenniFunctionalPerformanceTotal2013, cenniKinematicsThreeComponents2012, tersi3DElbowKinematics2009}. One benefit of this approach is that suitable images can be acquired with equipment commonly found in most hospitals. The main impediment for this technology to be used clinically is the time and expense of human operators to supervise the model-image registration process. If the need for human supervision for model-image registration were eliminated, then fluoroscopic imaging could provide a reliable, inexpensive, and accurate method to provide 3D dynamic joint kinematics in a clinical setting.
-State-of-the-art techniques for generating kinematics using model-image registration involve numerical optimization techniques that iteratively match bone or implant model projections in dynamic x-ray images \cite{postolkaEvaluationIntensitybasedAlgorithm2020,floodAutomatedRegistration3D2018,tsaiVolumetricModelbased2D2010}. These methods provide accurate 3D bone or implant kinematics when given a rough initial pose estimate for numerical optimization \cite{floodAutomatedRegistration3D2018}. However, these methods still require human input for an initial pose estimate, making them impractical for clinical use. 
-Recent advancements in computational capabilities and machine learning algorithms provide tools that are well-suited to replace human supervision for a range of time-consuming tasks including model-image registration, implant segmentation, and implant pose initialization. The goal of this dissertation is to provide a framework for the fully autonomous measurement of TKA kinematics from single-plane imaging using a mixture of both recent and historic algorithms.
+The fundamental role of human synovial joints is enabling dynamic motion within the musculoskeletal system, which is essential for a wide range of activities.
+Diseases affecting these joints often lead to pain during movement, imposing significant economic burdens estimated at approximately USD 300 billion annually, encompassing direct healthcare costs and indirect impacts such as lost productivity \cite{BMUSBurdenMusculoskeletal}.
+Among these conditions, osteoarthritis is particularly prevalent, characterized by the gradual deterioration of cartilage, leading to joint pain and mobility issues \cite{sharmaOsteoarthritisCompanionRheumatology2007}.
+Arthroplasty, specifically total knee arthroplasty (TKA) and reverse total shoulder arthroplasty (rTSA), presents a solution by replacing the damaged joint surfaces with synthetic materials to alleviate pain and restore functionality.
+Despite the high success rate, a subset of patients reports dissatisfaction due to residual symptoms such as pain, instability, or stiffness post-surgery \cite{bakerRolePainFunction2007,scottPredictingDissatisfactionFollowing2010, bournePatientSatisfactionTotal2010}.
+Current diagnostic practices for evaluating musculoskeletal disorders primarily rely on static assessments, which fail to capture the complexities of joint mechanics under dynamic conditions—when symptoms are most pronounced.
+While sophisticated technologies for 3D motion capture exist, their adoption in clinical settings is limited by high costs and operational challenges. Combined with 3D-to-2D model-image registration, fluoroscopic imaging has shown promise for accurate joint assessment.
+However, the technique's broader application is hampered by the extensive manual effort required, leading to increased time and financial resources \cite{banksAccurateMeasurementThreedimensional1996, mahfouzRobustMethodRegistration2003}.
+This dissertation introduces a novel framework for the autonomous measurement of TKA and rTSA kinematics utilizing single-plane imaging techniques.
+It integrates both modern and historical algorithms, leveraging recent advancements in computational power and machine learning to eliminate the need for manual intervention in the model-image registration process.
+This approach promises a reliable, cost-effective, and practical method for obtaining accurate dynamic joint kinematics in a clinical setting, potentially transforming the diagnostic landscape for musculoskeletal diseases and enhancing patient outcomes \cite{postolkaEvaluationIntensitybasedAlgorithm2020,floodAutomatedRegistration3D2018}.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../Andrew_Jensen_Dissertation"
+%%% End:
