--- a/src/1-Intro/ch1-lit_review.tex
+++ b/src/1-Intro/ch1-lit_review.tex
@@ -26,7 +26,7 @@ Machine learning algorithms automate the process of analytical model building, u
 
 \cref{sec:autonomous-kinematics} utilizes the previous chapters to describe a method for autonomously measuring total knee arthroplasty kinematics from single-plane fluoroscopic imaging. Utilizing the framework built by computer vision and machine learning, and driven by the shortcomings of historic methods, a novel pipeline is presented that removes the need for human supervision for this technology, bringing it one step closer to clinical adoption.
 
-Lastly, \cref{sec:aims} discusses the aims of this thesis, beginning with a validation of the pipeline, along with a pilot run with some patients, as well as distribution of the software packages to other researchers as freely distributed libraries and binaries.
+Lastly, \cref{sec:aims} discusses the aims of this thesis, beginning with a validation of the pipeline, a novel algorithm addressing a systemic issue in single-plane model-image registration, and a first-principals approach to exploring 2D shape sensitivity.
 
 \section{Computer Vision Primer}
 \label{sec:cv-primer}
