--- a/src/aim4-shape-sensitivity/ss_src/3_methods.tex
+++ b/src/aim4-shape-sensitivity/ss_src/3_methods.tex
@@ -1,5 +1,6 @@
 \section{Methods}
 
+
 \subsection{Data Collection}
 For shape sensitivity analysis, representative 3D models of rTSA humeral and glenosphere implants, as well as TKA femoral and tibial implants, were obtained from a manufacturer.
 The study focused on a single size for each implant type, as the scale of the shapes was normalized using an Invariant Shape Descriptor, rendering multiple sizes unnecessary for this analysis.
@@ -113,6 +114,5 @@ An analysis of these plots were conducted to assess the performance of JTML opti
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../Jensen_Shape_Sensitivity"
-%%% TeX-master: "../Jensen_Shape_Sensitivity"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
