--- a/src/aim4-shape-sensitivity/ss_src/4_results.tex
+++ b/src/aim4-shape-sensitivity/ss_src/4_results.tex
@@ -56,5 +56,5 @@ The femoral implant had the highest average sensitivity ($\frac{\mathbb{S}(\delt
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../Jensen_Shape_Sensitivity"
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
 %%% End:
